2022-12-01  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.61 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* ebuild-mode.el: Add documentation to some functions and
	variables.
	(ebuild-compilation-mode): Reword docstring to avoid an open paren
	at the beginning of a line, which confuses some Emacs versions.

	* ebuild-mode.el (ebuild-mode-restrict-list): Update.

2022-11-30  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-run-pkgdev
	and ebuild-mode-run-pkgcheck.

	* ebuild-mode.el (ebuild-compilation-mode): New mode for
	compilation buffers, filters SGR control sequences.
	(ebuild-log-buffer-mode): Default to it.
	(ebuild-mode-run-pkgdev, ebuild-mode-run-pkgcheck): Call compile
	with ebuild-log-buffer-mode.
	(ebuild-mode-process-environment): Don't set NOCOLOR if ansi-color
	is available.

2022-11-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-ebuild-history)
	(ebuild-mode-pkgdev-history, ebuild-mode-pkgcheck-history):
	New variables.
	(ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Use them.

	* ebuild-mode.el (ebuild-mode-process-environment): New custom
	variable. Bug 882055.
	(ebuild-run-command, ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): Use it.

	* ebuild-mode.el (ebuild-mode-ebuild-cmd-complete): New function,
	completes multiple ebuild commands. Bug 882053.
	(ebuild-run-command): Call it.
	(ebuild-mode-menu): Add ebuild-run-command without argument.

2022-11-19  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-run-pkgdev)
	(ebuild-mode-run-pkgcheck): New commands. Bug 881449.
	(ebuild-mode-map, ebuild-mode-menu): Keybindings and menu entries
	for them.
	(ebuild-mode-pkgdev-commands, ebuild-mode-pkgcheck-commands):
	New variables.
	(ebuild-mode-get-completion-function): New function, split off
	from ebuild-mode-ekeyword-complete.
	(ebuild-mode-ekeyword-complete): Call it.